# ProtobuffedDrogon

./: .gitignore  LICENSE  README.md  docker-compose.yml
front/: Dockerfile  index.php
front/js/: charts.js  helpers.js  protobuf.js  websocket.js
front/protos/: bundle.js  chart.browser.pb.js  chart.proto
hello_world/: CMakeLists.txt  Dockerfile  config.json
hello_world/protos/: chart.pb.cc  chart.proto
protos/: interfaces.proto
sender/: .gitignore  CMakeLists.txt  Dockerfile  main.cc
sender/protos/: chart.pb.h
